# mprs

./: .exrc  .gitignore  Cargo.toml  README.md  cliff.toml  design.md  install.sh  tem
.github/: FUNDING.yml
.github/workflows/: rust.yml
extras/: _mprs
mprs/: config.toml
src/: args.rs  client.rs  config.rs  format.rs  help.rs  lib.rs  main.rs  mpd_client.rs  utils.rs
src/args/: args.rs  argv.rs  flag.rs  mod.rs
src/args/parse/: command.rs  config.rs  mod.rs
src/config/: config.rs  configmanager.rs  mod.rs  param.rs
src/mpd/: client.rs  commands.rs  mod.rs  status.rs
src/mpd_client/: client.rs  controls.rs  mod.rs  songs.rs  utils.rs
