[package]
name = "mprs"
version = "0.3.0"
edition = '2021'
authors = ["abdellatif-temsamani <contact@abdellatif.dev>"]
description = "mpd written client rust"
readme = "README.md"
repository = "https://github.com/abdellatif-temsamani/mprs"
homepage = "https://github.com/abdellatif-temsamani/mprs"
license = "GPL-3.0"
keywords = ["mpd", "mpc", "music", "cli", "music_player_daemon"]
categories = ["command-line-utilities", "multimedia", "multimedia::audio"]
exclude = [".github/*", "SECURITY.md", "CONTRIBUTING.md"]

[dependencies]
clap = { version = "4.5.21", features = ["cargo", "derive"] }
colored = "2.1.0"
mpd = "0.1.0"
